# flatbuffers-builder

./: CHANGELOG.md  README.md  flatbuffers-builder.cabal
golden/: arrow-schema-001.hex.txt  arrow-schema-002.hex.txt  arrow.json  monster-a-001.hex.txt  monster-a-001.json  monster-b-001.hex.txt  monster-b-001.json
schema/: monster-a.fbs  monster-b.fbs
src/Flatbuffers/: Builder.hs
test/: ArrowSchema.hs  Main.hs  MonsterA.hs  MonsterB.hs
