cabal-version: 3.0
name: flatbuffers-builder
version: 1.0.0.0
synopsis: Flatbuffers encoding based on a syntax tree
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2025 Andrew Martin
category: Data
build-type: Simple
extra-doc-files: CHANGELOG.md

library
  ghc-options: -Wall -O2
  default-language: GHC2021
  exposed-modules:
    Flatbuffers.Builder
  build-depends:
    , base >=4.16 && <5
    , byte-order >=0.1.3
    , containers >=0.6
    , contiguous >=0.6
    , primitive >=0.7 && <0.9
    , text >=2.0
    , run-st >=0.1.1
    , array-builder >=0.1.2
    , byteslice >=0.2.9
  hs-source-dirs: src

test-suite test
  ghc-options: -Wall -O2
  default-language: GHC2021
  other-modules:
    ArrowSchema
    MonsterA
    MonsterB
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    , base >=4.16
    , flatbuffers-builder
    , tasty
    , tasty-golden >=2.3.5
    , bytesmith >=0.3.9
    , byteslice >=0.2.9
    , primitive >=0.7
    , bytebuild >=0.3.12
    , bytestring >=0.11
    , array-builder >=0.1.2
    , text >=2.0
    , base16-bytestring >=1.0.2
